--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 <h1> Welcome </h1>
-<p> This is a site I am playing with. My interests are...</p>
+<p> My name is Arthur, and this is a webpage I am creating. </p>
 {% endblock %}
