--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -57,7 +57,7 @@
                 <p> Xoogler and Adventurer </p>
               </div>
               <li class="nav-item">
-                <a class="nav-link active" href="{{ url_for('homepage') }}"> Home </a>
+                <a class="nav-link active" href="{{ url_for('index') }}"> Home </a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('health_scores') }}">
