--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -2,5 +2,13 @@
 
 {% block content %}
 <h1> Welcome </h1>
-<p> My name is Arthur, and this is a webpage I am creating. </p>
+<br>
+<p> My name is Arthur, I was working on search at Google Photos for 3 years. </p>
+<p> I worked on creating new search features, improving result quality, and handling the search analytics. </p>
+
+<p> I am taking some time off work to explore new interests/buzzwords like cloud, machine learning, analytics,
+    and take vacation longer than 15 days. </p>
+
+<p> All the code on this website (include the website itself) is accessible on my Github. This site is hosted on Google Cloud. </p>
+
 {% endblock %}
