--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -73,7 +73,7 @@
                   <a class="nav-link" href="https://github.com/mo0f"> Github </a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="#"> LinkedIn </a>
+                  <a class="nav-link" href="https://www.linkedin.com/in/arthur-sams-7763758b"> LinkedIn </a>
               </li>
             </ul>
           </div>
