--- a/flask/templates/health_scores.html
+++ b/flask/templates/health_scores.html
@@ -1,4 +1,13 @@
 {% extends "layout.html" %}
+{% block extrahead %}
+  <script>
+    $(document).ready(function() {
+        $("#menu_items").find("nav-link active").removeClass("active");
+        $('#health_scores').addClass("active");  
+    });    
+  </script>  
+{% endblock %}
+
 {% block content %}
   <h1>Los Angeles Health Scores Analysis</h1>
 
