--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -52,6 +52,9 @@
                 <a class="nav-link" id="home" href="{{ url_for('index') }}"> Home </a>
               </li>
               <li class="nav-item">
+                  <a class="nav-link" id="projects" href="{{ url_for('projects') }}"> Project Overview </a>
+              </li>
+              <li class="nav-item">
                   <a class="nav-link" id="health_scores" href="{{ url_for('health_scores') }}">
                       Health Scores Project
                   </a>
