--- a/flask/static/css/layout.css
+++ b/flask/static/css/layout.css
@@ -40,7 +40,7 @@
     top: 0;
     bottom: 0;
     left: 0;
-    height:100%
+    height:100%;
     z-index: 100; /* Behind the navbar */
     padding: 48px 0 0; /* Height of navbar */
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
