--- a/flask/templates/digits.html
+++ b/flask/templates/digits.html
@@ -38,7 +38,7 @@
     </table>
   <h2> The Model </h2>
 
-  <p> The model is from the Tensorflow MNIST tutorial. It consists of two sets of convolution with ReLU activation and max pooling,
+  <p> The model is from the Tensorflow MNIST tutorial. It consists of two sets of convolutions with ReLU activation and max pooling,
     a fully connected layer with dropout, then a logits layer for the 10 possible output classes.</p>
   <img src="static/img/digits_project/mnist_cnn.png" width="420" height="140" class="mx-auto d-block">
   <p> It was trained on batches of 100 images for 20,000 iterations taking about 1 hour, resulting in a 97% accuracy. </p>
