--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -11,13 +11,20 @@
 {% block content %}
 <h1> Welcome </h1>
 <br>
-<p> My name is Arthur, I was working on search at Google Photos for 3 years. </p>
+<p> My name is Arthur, I am a computer scientist who has been working on 
+    <a href=https://en.wikipedia.org/wiki/Information_retrieval#Overview> Information Retrieval </a> related projects. </p>
+  
+<p> For the last 3 years I was working on search for Google Photos, 
+    enabling users to search their personal photo library by image content, location, metadata, and other extracted features.</p>
 
-<p> I worked on creating new search features, improving result quality, and handling the search analytics. </p>
+<p> I was in charge of creating new search features, maintaining and improving result quality,
+    developing analytics, and running experimentation. 
+</p>
 
-<p> I am taking some time off work to explore new interests/buzzwords like cloud, machine learning, analytics,
-    and take vacation longer than 15 days. </p>
+<p> I recently decided to buy my time back and I am traveling and learning new things. </p>
 
-<p> All the code on this website (include the website itself) is accessible on my Github. This site is hosted on Google Cloud. </p>
+<p> Currently I am looking for a new opportunity. </p>
+
+<p> Please take a look at some sample projects I made. All the code on this website (include the website itself) is accessible on my Github.</p>
 
 {% endblock %}
