--- a/flask/templates/layout.html
+++ b/flask/templates/layout.html
@@ -29,7 +29,7 @@
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                   <a class="dropdown-item" href="{{ url_for('index') }}">Home</a>
                   <a class="dropdown-item" href="{{ url_for('projects') }}">Projects</a>
-                  <a class="dropdown-item" href="https://github.com/mo0f">Github</a>
+                  <a class="dropdown-item" href="https://github.com/aasams258">Github</a>
                   <a class="dropdown-item" href="https://www.linkedin.com/in/arthur-sams-7763758b">LinkedIn</a>
                 </div>
               </div>
@@ -45,8 +45,13 @@
                   <img src="static/img/arthur_headshot.png" class="img-circle" width="150" height="150">
               </div>
               <div class="bio">
-                <p> Math and CS, Cornell University  <p>
-                <p> Xoogler and Adventurer </p>
+                <div class="singlespaced">
+                    <p> Mathematics and Computer Science <p>
+                    <p> Cornell University </p>
+                    <br>
+                </div>
+
+                <p> Adventurer :: Xoogler :: Friend</p>
               </div>
               <li class="nav-item">
                 <a class="nav-link" id="home" href="{{ url_for('index') }}"> Home </a>
@@ -65,7 +70,7 @@
                   </a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="https://github.com/mo0f"> Github </a>
+                  <a class="nav-link" href="https://github.com/aasams258"> Github </a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="https://www.linkedin.com/in/arthur-sams-7763758b"> LinkedIn </a>
