--- a/flask/static/css/layout.css
+++ b/flask/static/css/layout.css
@@ -30,11 +30,18 @@
       padding-bottom: 10px;
   }
 
-  .sidebar .bio p{
-      margin-top: 5px;
-      text-align: center;
+  .sidebar .bio { 
       font-size: .75em;
+      font-weight: 500;
+      margin-top: 5px;
+      margin-bottom: -5px;
+      text-align: center;
   }
+
+  .sidebar .bio .singlespaced {
+    line-height: 10%;
+  }
+
   .sidebar {
     position: fixed;
     top: 0;
