--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -25,6 +25,7 @@
 
 <p> Currently I am looking for a new opportunity. </p>
 
-<p> Please take a look at some sample projects I made. All the code on this website (include the website itself) is accessible on my Github.</p>
+<p> Please take a look at some sample projects I made. 
+  All the code on this website (include the website itself) is accessible on my <a href="https://github.com/aasams258"> Github</a>.</p>
 
 {% endblock %}
