--- a/flask/templates/digits.html
+++ b/flask/templates/digits.html
@@ -16,7 +16,7 @@
   <br>
   <p> This project uses a Convolutional Neural Network (CNN) programmed in Tensorflow to identify a user drawn digit.</p>
   <p> To try it, draw a numeral from <b>0-9</b> in the box below and click submit. </p>
-  <p> Please be patient as the first input will take some time (~30s-1m) as the machine learning server needs to spin up.
+  <p> Please be patient as the first input will take some time (~45s) as the machine learning server needs to spin up.
       Subsequent entries are very quick, so feel free to read on while you wait. </p>
 
   <div class="text-center">
