--- a/flask/templates/health_scores.html
+++ b/flask/templates/health_scores.html
@@ -10,8 +10,8 @@
 
 {% block content %}
   <h1>Los Angeles Health Scores Analysis</h1>
-  <p> All restaurants by law display a what is basically a <i>cleanliness report card</i> in their window. 
-      Typically you will see A's, some B's, and the occasional C. But have you ever wondered if these grades
+  <p> All restaurants must by law display a what is basically a <i>cleanliness report card</i> in their window. 
+      Typically you will see A's, some B's, and the occasional C, but have you ever wondered if these grades
       have had any effect on their business? </p>
 
   <p> In this project I combine <b> Los Angeles County's Department of Public Health </b> restaurant inspections dataset
@@ -106,7 +106,7 @@
   <h2> Sources: </h2>
   <ul>
     <li> <i> Code </i> https://github.com/aasams258/healthscore_visualization </li> 
-    <li><i> Public Health Data </i> http://publichealth.lacounty.gov/eh/misc/ehpost.htm</li>
+    <li> <i> Public Health Data </i> http://publichealth.lacounty.gov/eh/misc/ehpost.htm</li>
     <li> <i> Yelp.com </i> </li>
   </ul>
 
