--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -21,11 +21,10 @@
     developing analytics, and running experimentation. 
 </p>
 
-<p> I recently decided to buy my time back and I am traveling and learning new things. </p>
+<p> I recently decided to buy my time back and I am traveling and learning new things. I recently got back from a 2.5 month journey in Europe and Africa.</p>
 
-<p> Currently I am looking for a new opportunity. </p>
+<p> Now I am taking my time looking for the right opportunity. </p>
 
-<p> Please take a look at some sample projects I made. 
-  All the code on this website (include the website itself) is accessible on my <a href="https://github.com/aasams258"> Github</a>.</p>
+<p> I invite you to explore my site, and take a look at some sample projects I made. All the code on this website (include the website itself) is accessible on my <a href="https://github.com/aasams258"> Github</a>.</p>
 
 {% endblock %}
